welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: not enough arguments for method motif1: (c: java.awt.Color)Unit.
Unspecified value parameter c.
motif1();
      ^